projects/instavote/dev/traefik-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: basic-auth
  namespace: instavote
spec:
  basicAuth:
    secret: basic-auth
    removeHeader: true
