projects/instavote/dev/db-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    role: db
    tier: back
  name: db
  namespace: instavote
spec:
  selector:
    role: db
  ports:
    - port: 5432
      protocol: TCP  # TCP is the default; can be omitted
      targetPort: 5432  # targetPort is the same as port by default; can be omitted
