projects/instavote/dev/vote-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote
spec:
  selector:
    role: vote
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000
  type: LoadBalancer  # NodePort
