projects/instavote/dev/vote-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote
  namespace: instavote
  annotations:
    kubernetes.io/ingress.class: traefik
    ingressClassName: traefik
    traefik.ingress.kubernetes.io/router.middlewares: instavote-basic-auth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: vote.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vote
            port:
              number: 80
